--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
-<h1>Sobre a Barbearia Alura</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<p>Localizada no coração da cidade <strong>a Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
-    Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
-<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
-    O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    <head>
+        <meta charset="UTF-8">
+        <title>Barbearia do John</title>
+        <link rel="stylesheet" href="style.css">   
+    </head>
+
+    <body> 
+        <img src ="banner.jpg">
+        <h1 >Sobre a Barbearia Alura</h1>
+
+        <p >Localizada no coração da cidade <strong>a Barbearia Alura</strong> traz para o mercado o que há de melhor para 
+         o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+        <p  id = "mission"><em>Nossa missão é:<strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
+        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>  
+    </body>
+
+</html>
