Finalização da página produtos

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <link rel="stylesheet" href="style.css">   
     </head>
 
-    <body> 
+    <body>
+        <header class ="principal-head">
+           <h1> Barbearia do John</h1>
+        </header> 
         <img id ="banner" src ="banner.jpg">
         <div class = "principal"> 
-            <h1 >Sobre a Barbearia Alura</h1>
+            <h2 class = "headers">Sobre a Barbearia Alura</h2>
 
             <p >Localizada no coração da cidade <strong>a Barbearia Alura</strong> traz para o mercado o que há de melhor para 
             o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -20,15 +23,15 @@
             O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
         </div>
         <div class="beneficios"> 
-            <h2>Beneficios</h2>
+            <h3 class = "headers">Beneficios</h3>
             
             <ul>
                 <li class = "itens"> Atendimento ao cliente</li>
                 <li class = "itens">Espaço diferenciado</li>            
                 <li class = "itens">Localização</li> 
                 <li class = "itens">Proficionais Qualificados</li>
-                <img src ="beneficios.jpg">
             </ul>
+            <img src ="beneficios.jpg" class="imagemDosBeneficios">
         </div>
     </body>
 
