--- a/produtos.html
+++ b/produtos.html
@@ -4,7 +4,7 @@
         <meta charset ="UTF-8">
         <title>Produtos - Barbearia do John </title>
         <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="produtos.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -15,7 +15,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="produtos.html">Produtos</a></li>
-                        <li><a href="https://www.google.com">Contatos</a></li>
+                        <li><a href="contato.html">Contatos</a></li>
                     </ul>
                 </nav>
            </div>
