--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia do John</title>
-        <link rel="stylesheet" href="style-home.css">   
+        <link rel="stylesheet" href="style-home.css">
+        
     </head>
 
     <body>
-        <header class ="principal-head">
+        <header class ="second-head">
            <h1> Barbearia do John</h1>
         </header> 
         <img id ="banner" src ="banner.jpg">
         <div class = "principal"> 
-            <h2 class = "headers">Sobre a Barbearia Alura</h2>
+            <h2 class = "headers">Sobre a Barbearia do John</h2>
 
             <p >Localizada no coração da cidade <strong>a Barbearia Alura</strong> traz para o mercado o que há de melhor para 
             o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
@@ -32,7 +33,12 @@
                 <li class = "itens">Proficionais Qualificados</li>
             </ul>
             <img src ="beneficios.jpg" class="imagemDosBeneficios">
+            <h4 id = "linkAcessoPagProdutos"><a href="produtos.html">Conheça nossos produtos</a></h4>
         </div>
+        <footer>
+            <img src ="logo-branco.png">
+            <p class ="copyright">&copy Copyright Barbearia do John - 2022</p>
+        </footer>
     </body>
 
 </html>
