Melhorando a página principal da barbearia

--- a/barbearia_do_John/contato.html
+++ b/barbearia_do_John/contato.html
@@ -5,6 +5,8 @@
     <title>Contato - barbearia do John</title>
     <link rel= "stylesheet" href="reset.css">
     <link rel ="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -58,8 +60,32 @@
             <label class ="checkbox"><input type ="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
     
             <input type="submit" value ="Enviar Formulário" class="envioDeFormulario">
-
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+        <tbody>
+            <tr>
+                <td>Segunda</td>
+                <td>8h ~ 20h</td>
+            </tr>
+           
+
+            <tr>
+                <td>Quarta</td>
+                <td>8h ~ 20h</td>
+            </tr>
+            <tr>
+                <td>Sexta</td>
+                <td>8h ~ 20h</td>
+            </tr>
+        </tbody>
+        </table>
     </main>
 
     <footer>
