--- a/barbearia_do_John/produtos.html
+++ b/barbearia_do_John/produtos.html
@@ -5,7 +5,7 @@
         <title>Produtos - Barbearia do John </title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
 
     <body>
         <header> 
