Finalizando o site e começando as modificações para mobile

--- a/barbearia_do_John/contato.html
+++ b/barbearia_do_John/contato.html
@@ -2,6 +2,7 @@
 <html lag="pt-br">
 <head>
     <meta charset ="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Contato - barbearia do John</title>
     <link rel= "stylesheet" href="reset.css">
     <link rel ="stylesheet" href="style.css">
@@ -23,7 +24,7 @@
        </div>
     </header>
 
-    <main>
+    <main class="enquadramento">
         <form>
             <label for="nomeSobrenome">Nome e Sobrenome</label>
             <input type="text" id="nomeSobrenome" class="input-padrao" required>
