--- a/barbearia_do_John/index.html
+++ b/barbearia_do_John/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Barbearia do John</title>
         <link rel="stylesheet" href ="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -29,19 +30,20 @@
             <!-- a tag <section> teremos uma divisão por conteúdo complexo, semanticamente homogêneo.-->
             <section class = "principal"> 
                 <h2 class = "principal-head-text">Sobre a Barbearia do John</h2>
+                <div class="enquadramento">
                 <img class="imagemUtensilios" src = "utensilios.jpg" alt ="Utensilios de barbearia">
                 <p>Localizada no coração da cidade <strong>a Barbearia do John</strong> traz para o mercado o que há de melhor para 
-                o seu cabelo e barba. Fundada em 2019, a Barbearia do John já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
+                o seu cabelo e barba. Fundada em 2019, a Barbearia do John já é destaque na cidade e conquista novos clientes a cada dia.</p> 
                 <p  id = "mission"> <em>Nossa missão é:<strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
                 O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p> 
+                </div>
             </section>
 
             <section class="maps">,
                 <h3 class ="principal-head-text"> Nosso estabelecimento</h3>
                 <p> Nosso estabelecimento está localizado no coração da cidade</p>
-                <div class="maps-conteudo">
+                <div class="enquadramento">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1846352287375!2d-43.134359385518636!3d-22.90655974362063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817c04faf403%3A0x1df9ef1b14549526!2sCondom%C3%ADnio%20do%20Edif%C3%ADcio%20Albatroz!5e0!3m2!1spt-BR!2sbr!4v1659560632251!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
@@ -61,14 +63,16 @@
                 </div>
 
                 <div class ="video">
-                    <iframe  width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>  
+                    <iframe  width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>  
                     </iframe>
                 </div>
             </section>
+            
         </main>
         <footer>
             <img src ="logo-branco.png">
             <p class ="copyright">&copy Copyright Barbearia do John - 2022</p>
+            
         </footer>
     </body>
 
