--- a/barbearia_do_John/produtos.html
+++ b/barbearia_do_John/produtos.html
@@ -2,10 +2,12 @@
  <html lang = "pt-br">
     <head>
         <meta charset ="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Produtos - Barbearia do John </title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    </head>
 
     <body>
         <header> 
